Agregando estilos a la intro de mi blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,6 +4,8 @@
 		<title>This is a little blogpost</title>
 	</head>
 	<body>
+	<h1>Practicando con git</h1>
 	<p> I am creating a blogpost as example to work with git</p>
+	<p>En esta clase aprenderemos como revertir un commit sin usar forzosamente el commando git reset</p>
 	</body>
 </html>
