Colocando un párrafo mas, y cambiando el color del titulo

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,5 +7,6 @@
 	<h1>Practicando con git</h1>
 	<p> I am creating a blogpost as example to work with git</p>
 	<p>En esta clase aprenderemos como revertir un commit sin usar forzosamente el commando git reset</p>
+	<p>Al parecer para efectuar cambios y verlos reflejados en git deben hacerse sobre un archivo de texto, es decir creando contenido más no añadiendole estilos</p>
 	</body>
 </html>
