--- a/blogpost.html
+++ b/blogpost.html
@@ -6,8 +6,12 @@
 	<body>
 	<h1>Practicando con git</h1>
 	<p> I am creating a blogpost as example to work with git</p>
-	<p>En esta clase aprenderemos como revertir un commit sin usar forzosamente el commando git reset</p>
+	<p>En esta clase (12) aprenderemos como revertir un commit sin usar forzosamente el commando git reset</p>
 	<p>Al parecer para efectuar cambios y verlos reflejados en git deben hacerse sobre un archivo de texto, es decir creando contenido más no añadiendole estilos. <br> He notado que si quiero reflejar lo editado tanto en un archivo como en el otro lo debo guardar en conjunto, es decir, hacer el commit cuando ya tenga mis cambios listos</p>
 	<p>Retomando los conceptos de git restore y git reset</p>
+	<section class="container">
+		<h1 class="container__title">Introducción a las ramas, git branches</h1>
+		<p class="container__text">Acá estare creando contenido en una nueva rama que se independizará sobre la rama master</p>
+	</section>
 	</body>
 </html>
