Generando un nuevo párrafo en mi rama master

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,7 @@
 	<section class="container">
 		<h1 class="container__title">Introducción a las ramas, git branches</h1>
 		<p class="container__text">Acá estare creando contenido en una nueva rama que se independizará sobre la rama master</p>
+		<p class="container__text">En este blog estaré compartiendo algunos de los cambios que este realizando entre ramas, adicional a eso lo que agregué en este documento tendrá que ver con lo que vaya viendo en las clases de este maravilloso curso</p>
 	</section>
 	</body>
 </html>
