--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
 	<h1>Practicando con git</h1>
 	<p> I am creating a blogpost as example to work with git</p>
 	<p>En esta clase (12) aprenderemos como revertir un commit sin usar forzosamente el commando git reset</p>
-	<p>Al parecer para efectuar cambios y verlos reflejados en git deben hacerse sobre un archivo de texto, es decir creando contenido más no añadiendole estilos. <br> He notado que si quiero reflejar lo editado tanto en un archivo como en el otro lo debo guardar en conjunto, es decir, hacer el commit cuando ya tenga mis cambios listos</p>
+	<p>Al parecer para efectuar cambios y verlos reflejados en git deben hacerse sobre un archivo de texto, es decir sobre texto plano (.txt). <br> He notado que si quiero reflejar lo editado tanto en un archivo como en el otro lo debo guardar en conjunto, es decir, hacer el commit cuando ya tenga mis cambios listos</p>
 	<p>Retomando los conceptos de git restore y git reset</p>
 	<section class="container">
 		<header>
