--- a/blogpost.html
+++ b/blogpost.html
@@ -12,11 +12,12 @@
 	<section class="container">
 		<header>
 			<h1 class="header__title">Juanchoroyblog</h1>
-			<p class="header__description">Tu blog con las mejores explicaciones de git</p>
+			<p class="header__description">Tu blog master en  explicaciones de git</p>
 		</header>
 		<h2 class="container__title">Introducción a las ramas, git branches</h2>
 		<p class="container__text">Acá estare creando contenido en una nueva rama que se independizará sobre la rama master</p>
 		<p class="container__text">En este blog estaré compartiendo algunos de los cambios que este realizando entre ramas, adicional a eso lo que agregué en este documento tendrá que ver con lo que vaya viendo en las clases de este maravilloso curso</p>
+		<quote class="container__text">Suscribete para no perderte de nada</quote>
 	</section>
 	</body>
 </html>
