Cambiando el título de la pestaña desde gitHub
Primeros pasos con gitHub, en este caso he realizado un cambio desde el servidro remoto y debo llevar estos cambios a mi repositorio local haciendo pull origin.

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
 	<head> 
 		<link rel="stylesheet" href= "css/style.css"> 
-		<title>This is a little blogpost</title>
+		<title>Welcome to Hyperblog</title>
 	</head>
 	<body>
 	<h1>Practicando con git</h1>
