Una versión actualizada del Hyperblog

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
 	<head> 
 		<link rel="stylesheet" href= "css/style.css"> 
-		<title>Welcome to Hyperblog</title>
+		<title>Welcome to Hyperblog 2.0</title>
 	</head>
 	<body>
 	<h1>Practicando con git</h1>
