Aclarando un concepto sobre la rama en la que se estan efectuando los cambios

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,7 +15,7 @@
 			<p class="header__description">Tu blog que comanda la cabecera de explicaciones de git</p>
 		</header>
 		<h2 class="container__title">Introducción a las ramas, git branches</h2>
-		<p class="container__text">Acá estare creando contenido en una nueva rama que se independizará sobre la rama master</p>
+		<p class="container__text">Acá estare creando contenido en una nueva rama que se independizará sobre la rama main, aunque recapitulando ya he hecho la fusión entre las dos ramas por lo que los cambios se estan ejecutando directamente desde la rama main</p>
 		<p class="container__text">En este blog estaré compartiendo algunos de los cambios que este realizando entre ramas, adicional a eso lo que agregué en este documento tendrá que ver con lo que vaya viendo en las clases de este maravilloso curso</p>
 		<quote class="container__text">Suscribete para no perderte de nada</quote>
 	</section>
